--- a/project.html
+++ b/project.html
@@ -83,6 +83,12 @@
               </article>
 
             </div>
+              <div class="project-cards">
+              <article class="img-container">   
+                           <img src="images/react-todo.png" alt="">
+              </article>
+
+            </div>
             <div class="project-cards">
               <article class="img-container">   
                            <img src="images/WEATHER-APP.png" alt="">
